src/main/java/com/example/springboot3jwtauthentication/error/EmailAlreadyExistsException.java
package com.example.springboot3jwtauthentication.error;

public class EmailAlreadyExistsException extends RuntimeException {
    public EmailAlreadyExistsException(String message) {
        super(message);
    }
}

